<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="25dp"
    tools:context=".Sign_Up">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="100dp"
    android:fontFamily="monospace"
    android:text="@string/signup"
    android:textAlignment="center"
    android:textSize="34sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<EditText
    android:id="@+id/signUpEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:ems="10"
    android:hint="@string/signup_email"
    android:inputType="textEmailAddress" />

<EditText
    android:id="@+id/signUpPwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:ems="10"
    android:hint="@string/signup_pwd"
    android:inputType="textPassword" />


<EditText
    android:id="@+id/signUpConfirmPwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:ems="10"
    android:hint="@string/signup_cnf_pwd"
    android:inputType="textPassword" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/signup" />

    <Button
        android:id="@+id/loginRedirectBtn"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />
</LinearLayout>
</LinearLayout>



